--- a/Makefile.old
+++ b/Makefile.old
@@ -4,29 +4,29 @@ ifdef CROSS_COMPILE
 	INCLUDE = -isystem/usr/include/ -isystem/usr/include/x86_64-linux-gnu/
 endif
 ifneq (, $(findstring x86_64, $(SYS)))
-	OSFLAGS =  -O0 -fPIC -march=native -mtune=native -mfpmath=sse -Wconversion -Wunreachable-code -Wstrict-prototypes 
+	OSFLAGS = -Ofast -fPIC -march=native -mtune=native -mfpmath=sse -Wconversion -Wunreachable-code -Wstrict-prototypes 
 endif
 ifneq (, $(findstring arm, $(SYS)))
 	ifneq (, $(findstring gnueabihf, $(SYS)))
-		OSFLAGS =  -O0 -mfloat-abi=hard -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
+		OSFLAGS = -Ofast -mfloat-abi=hard -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
 	endif
 	ifneq (, $(findstring gnueabi, $(SYS)))
-		OSFLAGS =  -O0 -mfloat-abi=hard -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
+		OSFLAGS = -Ofast -mfloat-abi=hard -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
 	endif	
 	ifneq (, $(findstring gnueabisf, $(SYS)))
-		OSFLAGS =  -O0 -mfloat-abi=soft -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
+		OSFLAGS = -Ofast -mfloat-abi=soft -mfpu=vfp -march=armv6 -Wconversion -Wunreachable-code -Wstrict-prototypes 
 	endif
 endif
 ifneq (, $(findstring amd64, $(SYS)))
-	OSFLAGS =  -O0 -fPIC -march=native -mtune=native -mfpmath=sse -Wno-conversion
+	OSFLAGS = -O3 -fPIC -march=native -mtune=native -mfpmath=sse -Wno-conversion
 endif
 GIT_HASH := $(shell git describe --always)
-CFLAGS = -ffast-math -rdynamic -funwind-tables $(OSFLAGS) -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/ -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -isystem.. -Ilibs/pilight/ -Ilibs/protocols/ -Ilibs/hardware/ -Ilibs/avrdude/ -Ilibs/platform/ -Ilibs/config/ -pthread -lm -ldl -DHASH=\"$(GIT_HASH)\"
-SUBDIRS = libs/pilight libs/protocols libs/hardware libs/avrdude libs/platform libs/config
+CFLAGS = -ffast-math -rdynamic -funwind-tables $(OSFLAGS) -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/ -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -isystem.. -Ilibs/pilight/ -Ilibs/protocols/ -Ilibs/hardware/ -Ilibs/avrdude/ -Ilibs/platform/ -Ilibs/config/ -Ilibs/operators/ -Ilibs/actions/ -pthread -lm -ldl -DHASH=\"$(GIT_HASH)\"
+SUBDIRS = libs/pilight libs/protocols libs/hardware libs/avrdude libs/platform libs/config libs/operators libs/actions
 SRC = $(wildcard *.c)
 INCLUDES = $(wildcard libs/pilight/*.c) $(wildcard libs/avrdude/*.c)
 PROGAMS = $(patsubst %.c,pilight-%,$(SRC))
-LIBS = libs/pilight/pilight.o libs/avrdude/avrdude.o libs/protocols/protocols.o libs/hardware/hardware.o libs/platform/platform.o libs/config/config.o
+LIBS = libs/pilight/pilight.o libs/avrdude/avrdude.o libs/protocols/protocols.o libs/hardware/hardware.o libs/platform/platform.o libs/config/config.o libs/operators/operators.o libs/actions/actions.o
 PROTCOLS := $(shell cd libs/protocols/ && find * -name \*.so)
 HARDWARE := $(shell cd libs/hardware/ && find * -name \*.so)
 PLATFORM := $(shell cd libs/platform/ && find * -name \*.so)
@@ -41,6 +41,10 @@ subdirs: modules $(SUBDIRS) all
 modules:
 	ls libs/protocols/*.h | sed -e"" 's/libs/	#include "../g' -e"" 's/\.h/\.h"/g' > libs/pilight/protocol_header.h
 	grep -h ".*Init(void)" libs/protocols/*.c | sed -e"" "s/void /	/" -e"" "s/(void) {/();/" > libs/pilight/protocol_init.h
+	ls libs/operators/*.h | sed -e"" 's/libs/	#include "../g' -e"" 's/\.h/\.h"/g' > libs/pilight/operator_header.h
+	grep -h ".*Init(void)" libs/operators/*.c | sed -e"" "s/void /	/" -e"" "s/(void) {/();/" > libs/pilight/operator_init.h
+	ls libs/actions/*.h | sed -e"" 's/libs/	#include "../g' -e"" 's/\.h/\.h"/g' > libs/pilight/action_header.h
+	grep -h ".*Init(void)" libs/actions/*.c | sed -e"" "s/void /	/" -e"" "s/(void) {/();/" > libs/pilight/action_init.h
 	ls libs/hardware/*.h | sed -e"" 's/libs/	#include "../g' -e"" 's/\.h/\.h"/g' > libs/config/hardware_header.h
 	grep -h "void .*Init(void)" libs/hardware/*.c | sed -e"" "s/void /	/" -e"" "s/(void) {/();/" > libs/config/hardware_init.h
 
@@ -50,7 +54,7 @@ $(SUBDIRS):
 all: $(LIBS) libpilight.so libpilight.a $(PROGAMS) 
 
 libpilight.so: $(LIBS)
-	$(GCC) $(LIBS) -shared -o libpilight.so -lpthread -lm -ldl 
+	$(GCC) $(CFLAGS) $(LIBS) -shared -o libpilight.so -lpthread -lm -ldl 
 	
 libpilight.a: $(LIBS)
 	$(CROSS_COMPILE)ar -rsc libpilight.a $(LIBS)
@@ -101,7 +105,7 @@ install:
 	install -m 0655 pilight-flash /usr/local/sbin/
 	install -m 0655 libpilight.so /usr/local/lib/pilight/
 	install -m 0655 libpilight.a /usr/local/lib/pilight/
-	install -m 0644 settings.json-default /etc/pilight/
+	install -m 0644 config.json-default /etc/pilight/
 	for f in $(WEBFILES) ; do \
 		cd web/ && install -D $$f /usr/local/share/pilight/`dirname $$f` || true && cd ..; \
 	done
@@ -115,8 +119,7 @@ install:
 	mv /etc/init.d/pilight.initd /etc/init.d/pilight
 	update-rc.d pilight defaults
 
-	[ ! -f /etc/pilight/settings.json ] && mv /etc/pilight/settings.json-default /etc/pilight/settings.json || true
-	[ ! -f /etc/pilight/hardware.json ] && cp hardware.json /etc/pilight/ || true
+	[ ! -f /etc/pilight/config.json ] && mv /etc/pilight/config.json-default /etc/pilight/config.json || true
 	[ -f /usr/local/sbin/pilight-control ] && rm /usr/local/sbin/pilight-control || true
 	[ -f /usr/local/sbin/pilight-send ] && rm /usr/local/sbin/pilight-send || true
 	[ -f /usr/local/sbin/pilight-receive ] && rm /usr/local/sbin/pilight-receive || true
