--- a/pilight.h.in
+++ b/pilight.h.in
@@ -3,63 +3,67 @@
 
 	This file is part of pilight.
 
-    pilight is free software: you can redistribute it and/or modify it under the
+	pilight is free software: you can redistribute it and/or modify it under the
 	terms of the GNU General Public License as published by the Free Software
 	Foundation, either version 3 of the License, or (at your option) any later
 	version.
 
-    pilight is distributed in the hope that it will be useful, but WITHOUT ANY
+	pilight is distributed in the hope that it will be useful, but WITHOUT ANY
 	WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 	A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with pilight. If not, see	<http://www.gnu.org/licenses/>
+	You should have received a copy of the GNU General Public License
+	along with pilight. If not, see	<http://www.gnu.org/licenses/>
 */
 
 #ifndef _PILIGHT_H_
 #define _PILIGHT_H_
 
 #include "json.h"
+#include "devices.h"
 
 /* Internals */
 
 #cmakedefine WEBSERVER
 #cmakedefine PILIGHT_UPDATER
 
-#define VERSION					"5.0"
-#define PULSE_DIV				34
-#define EPSILON					0.00001
+#define VERSION									"5.0"
+#define PULSE_DIV								34
+#define EPSILON									0.00001
 
 #ifdef WEBSERVER
-	#define WEBSERVER_PORT			5001
-	#define WEBSERVER_ROOT			"/usr/local/share/pilight/"
-	#define WEBSERVER_ENABLE		1
-	#define WEBSERVER_CACHE			1
-	#define WEBGUI_TEMPLATE			"default"
+	#define WEBSERVER_PORT				5001
+	#define WEBSERVER_ROOT				"/usr/local/share/pilight/"
+	#define WEBSERVER_ENABLE			1
+	#define WEBSERVER_CACHE				1
+	#define WEBGUI_TEMPLATE				"default"
 	#define MAX_UPLOAD_FILESIZE 	5242880
 	#define MAX_CACHE_FILESIZE 		1048576
-	#define WEBSERVER_WORKERS		1
+	#define WEBSERVER_WORKERS			1
 	#define WEBSERVER_CHUNK_SIZE 	4096
-	#define WEBSERVER_USER 			"www-data"
-	#define WEBGUI_WEBSOCKETS	1
+	#define WEBSERVER_USER 				"www-data"
+	#define WEBGUI_WEBSOCKETS			1
 #endif
 
-#define MAX_CLIENTS					30
-#define BUFFER_SIZE					1025
-#define EOSS						"\n\n" // End Of Socket Stream
+#define MAX_CLIENTS							30
+#define BUFFER_SIZE							1025
+#define MEMBUFFER								128
+#define EOSS										"\n\n" // End Of Socket Stream
 
-#define PROTOCOL_ROOT				"/usr/local/lib/pilight/protocols/"
-#define HARDWARE_ROOT				"/usr/local/lib/pilight/hardware/"
+#define PROTOCOL_ROOT						"/usr/local/lib/pilight/protocols/"
+#define HARDWARE_ROOT						"/usr/local/lib/pilight/hardware/"
+#define OPERATOR_ROOT						"/usr/local/lib/pilight/operators/"
+#define ACTION_ROOT							"/usr/local/lib/pilight/actions/"
 
-#define PID_FILE					"/var/run/pilight.pid"
-#define CONFIG_FILE					"/etc/pilight/config.json"
-#define LOG_FILE					"/var/log/pilight.log"
-#define TZDATA_FILE					"/etc/pilight/tzdata.json"
-#define LOG_MAX_SIZE 				1048576 // 1024*1024
+#define PID_FILE								"/var/run/pilight.pid"
+#define CONFIG_FILE							"/etc/pilight/config.json"
+#define LOG_FILE								"/var/log/pilight.log"
+#define TZDATA_FILE							"/etc/pilight/tzdata.json"
+#define LOG_MAX_SIZE 						1048576 // 1024*1024
 
-#define SEND_REPEATS				10
-#define RECEIVE_REPEATS				1
-#define UUID_LENGTH					21
+#define SEND_REPEATS						10
+#define RECEIVE_REPEATS					1
+#define UUID_LENGTH							21
 
 #ifdef FIRMWARE
 	#define FIRMWARE_PATH				"/etc/pilight/"
@@ -68,6 +72,7 @@
 typedef struct pilight_t {
     void (*broadcast)(char *name, JsonNode *message);
     int (*send)(JsonNode *json);
+    int (*control)(struct devices_t *dev, char *state, JsonNode *values);
     void (*receive)(int *rawcode, int rawlen, int plslen, int hwtype);
 } pilight_t;
 
