Allow events/actions module compilation & bugfixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -657,7 +657,29 @@ if(${MODULESPACK} MATCHES "ON")
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
 		install(FILES lib${name}.so DESTINATION lib/pilight/hardware RENAME ${name}.so COMPONENT pilight-hardware-${debname})
+	endforeach()
+
+	foreach(file ${actions})
+		get_filename_component(name ${file} NAME_WE)
+		add_library(${name}_module MODULE ${file})
+		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
+		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
+		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
+		string(REPLACE "_" "-" debname ${name})
+		install(FILES lib${name}.so DESTINATION lib/pilight/actions RENAME ${name}.so COMPONENT pilight-action-${debname})
 	endforeach()	
+	
+	foreach(file ${operators})
+		get_filename_component(name ${file} NAME_WE)
+		add_library(${name}_module MODULE ${file})
+		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
+		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
+		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
+		string(REPLACE "_" "-" debname ${name})
+		install(FILES lib${name}.so DESTINATION lib/pilight/operators RENAME ${name}.so COMPONENT pilight-operator-${debname})
+	endforeach()		
 endif()
 
 if(${MODULESPACK} MATCHES "OFF")
