--- a/Makefile.old
+++ b/Makefile.old
@@ -24,12 +24,14 @@ GIT_HASH := $(shell git describe --always)
 CFLAGS = -ffast-math -rdynamic -funwind-tables $(OSFLAGS) -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/ -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -isystem.. -Ilibs/pilight/ -Ilibs/protocols/ -Ilibs/hardware/ -Ilibs/avrdude/ -Ilibs/platform/ -Ilibs/config/ -Ilibs/operators/ -Ilibs/actions/ -pthread -lm -ldl -DHASH=\"$(GIT_HASH)\"
 SUBDIRS = libs/pilight libs/protocols libs/hardware libs/avrdude libs/platform libs/config libs/operators libs/actions
 SRC = $(wildcard *.c)
-INCLUDES = $(wildcard libs/pilight/*.c) $(wildcard libs/avrdude/*.c)
+INCLUDES = $(wildcard libs/pilight/*.c) $(wildcard libs/avrdude/*.c) $(wildcard libs/actions/*.c) $(wildcard libs/operators/*.c) $(wildcard libs/protocols/*.c)
 PROGAMS = $(patsubst %.c,pilight-%,$(SRC))
 LIBS = libs/pilight/pilight.o libs/avrdude/avrdude.o libs/protocols/protocols.o libs/hardware/hardware.o libs/platform/platform.o libs/config/config.o libs/operators/operators.o libs/actions/actions.o
 PROTCOLS := $(shell cd libs/protocols/ && find * -name \*.so)
 HARDWARE := $(shell cd libs/hardware/ && find * -name \*.so)
 PLATFORM := $(shell cd libs/platform/ && find * -name \*.so)
+ACTIONS := $(shell cd libs/actions/ && find * -name \*.so)
+OPERATORS := $(shell cd libs/operators/ && find * -name \*.so)
 CONFIG := $(shell cd libs/config/ && find * -name \*.so)
 WEBFILES := $(shell cd web && find * -type f)
 WEBDIRS := $(shell cd web && find * -type d )
