Fixed FreeBSD compatibility and added LOG_STACK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -647,6 +647,7 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module execinfo)
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -658,6 +659,7 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module execinfo)
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -669,6 +671,7 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module execinfo)
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -680,6 +683,7 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
+		target_link_libraries(${name}_module execinfo)
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -695,10 +699,12 @@ if(${MODULESPACK} MATCHES "OFF")
 
 	target_link_libraries(pilight_shared ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_shared m)
+	target_link_libraries(pilight_shared execinfo)
 	target_link_libraries(pilight_shared rt)
 	target_link_libraries(pilight_shared ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight_static ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_static m)
+	target_link_libraries(pilight_static execinfo)
 	target_link_libraries(pilight_static rt)
 	target_link_libraries(pilight_static ${CMAKE_DL_LIBS})
 
@@ -720,6 +726,7 @@ if(${MODULESPACK} MATCHES "OFF")
 	set_source_files_properties(${avrdude_sources} PROPERTIES COMPILE_FLAGS " -w ")
 
 
+	install(CODE "execute_process(COMMAND rm /usr/local/lib/libpilight.so)")
 	install(FILES libpilight.so DESTINATION lib/pilight/ RENAME libpilight.so.${PROJECT_VERSION} COMPONENT pilight)
 	install(FILES libpilight.a DESTINATION lib/pilight/ RENAME libpilight.a COMPONENT pilight)
 
@@ -741,6 +748,7 @@ if(${MODULESPACK} MATCHES "OFF")
 	target_link_libraries(pilight-daemon pilight_shared)
 	target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-daemon m)
+	target_link_libraries(pilight-daemon execinfo)
 	target_link_libraries(pilight-daemon ${CMAKE_THREAD_LIBS_INIT})
 
 	if(${UPDATE} MATCHES "ON")
@@ -751,42 +759,49 @@ if(${MODULESPACK} MATCHES "OFF")
 	target_link_libraries(pilight-raw pilight_shared)
 	target_link_libraries(pilight-raw ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-raw m)
+	target_link_libraries(pilight-raw execinfo)
 	target_link_libraries(pilight-raw ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-send send.c)
 	target_link_libraries(pilight-send pilight_shared)
 	target_link_libraries(pilight-send ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-send m)
+	target_link_libraries(pilight-send execinfo)
 	target_link_libraries(pilight-send ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-control control.c)
 	target_link_libraries(pilight-control pilight_shared)
 	target_link_libraries(pilight-control ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-control m)
+	target_link_libraries(pilight-control execinfo)
 	target_link_libraries(pilight-control ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-receive receive.c)
 	target_link_libraries(pilight-receive pilight_shared)
 	target_link_libraries(pilight-receive ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-receive m)
+	target_link_libraries(pilight-receive execinfo)
 	target_link_libraries(pilight-receive ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-debug debug.c)
 	target_link_libraries(pilight-debug pilight_shared)
 	target_link_libraries(pilight-debug ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-debug m)
+	target_link_libraries(pilight-debug execinfo)
 	target_link_libraries(pilight-debug ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-uuid uuid.c)
 	target_link_libraries(pilight-uuid pilight_shared)
 	target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-uuid m)
+	target_link_libraries(pilight-uuid execinfo)
 	target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-flash flash.c)
 	target_link_libraries(pilight-flash pilight_shared)
 	target_link_libraries(pilight-flash ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-flash m)
+	target_link_libraries(pilight-flash execinfo)
 	target_link_libraries(pilight-flash ${CMAKE_THREAD_LIBS_INIT})
 
 	if(EXISTS "/usr/local/sbin/pilight-send")
