Fixed compilation and compilation bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -647,7 +647,9 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
-		target_link_libraries(${name}_module execinfo)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+			target_link_libraries(${name}_module execinfo)
+		endif()
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -659,7 +661,9 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
-		target_link_libraries(${name}_module execinfo)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+			target_link_libraries(${name}_module execinfo)
+		endif()
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -671,7 +675,9 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
-		target_link_libraries(${name}_module execinfo)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+			target_link_libraries(${name}_module execinfo)
+		endif()
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -683,7 +689,9 @@ if(${MODULESPACK} MATCHES "ON")
 		add_library(${name}_module MODULE ${file})
 		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
 		target_link_libraries(${name}_module m)
-		target_link_libraries(${name}_module execinfo)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+			target_link_libraries(${name}_module execinfo)
+		endif()
 		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
 		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
 		string(REPLACE "_" "-" debname ${name})
@@ -699,12 +707,16 @@ if(${MODULESPACK} MATCHES "OFF")
 
 	target_link_libraries(pilight_shared ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_shared m)
-	target_link_libraries(pilight_shared execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight_shared execinfo)
+	endif()
 	target_link_libraries(pilight_shared rt)
 	target_link_libraries(pilight_shared ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight_static ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_static m)
-	target_link_libraries(pilight_static execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight_static execinfo)
+	endif()
 	target_link_libraries(pilight_static rt)
 	target_link_libraries(pilight_static ${CMAKE_DL_LIBS})
 
@@ -748,7 +760,9 @@ if(${MODULESPACK} MATCHES "OFF")
 	target_link_libraries(pilight-daemon pilight_shared)
 	target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-daemon m)
-	target_link_libraries(pilight-daemon execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-daemon execinfo)
+	endif()
 	target_link_libraries(pilight-daemon ${CMAKE_THREAD_LIBS_INIT})
 
 	if(${UPDATE} MATCHES "ON")
@@ -759,49 +773,63 @@ if(${MODULESPACK} MATCHES "OFF")
 	target_link_libraries(pilight-raw pilight_shared)
 	target_link_libraries(pilight-raw ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-raw m)
-	target_link_libraries(pilight-raw execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-raw execinfo)
+	endif()
 	target_link_libraries(pilight-raw ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-send send.c)
 	target_link_libraries(pilight-send pilight_shared)
 	target_link_libraries(pilight-send ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-send m)
-	target_link_libraries(pilight-send execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-send execinfo)
+	endif()
 	target_link_libraries(pilight-send ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-control control.c)
 	target_link_libraries(pilight-control pilight_shared)
 	target_link_libraries(pilight-control ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-control m)
-	target_link_libraries(pilight-control execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-control execinfo)
+	endif()
 	target_link_libraries(pilight-control ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-receive receive.c)
 	target_link_libraries(pilight-receive pilight_shared)
 	target_link_libraries(pilight-receive ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-receive m)
-	target_link_libraries(pilight-receive execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-receive execinfo)
+	endif()
 	target_link_libraries(pilight-receive ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-debug debug.c)
 	target_link_libraries(pilight-debug pilight_shared)
 	target_link_libraries(pilight-debug ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-debug m)
-	target_link_libraries(pilight-debug execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-debug execinfo)
+	endif()
 	target_link_libraries(pilight-debug ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-uuid uuid.c)
 	target_link_libraries(pilight-uuid pilight_shared)
 	target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-uuid m)
-	target_link_libraries(pilight-uuid execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-uuid execinfo)
+	endif()
 	target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-flash flash.c)
 	target_link_libraries(pilight-flash pilight_shared)
 	target_link_libraries(pilight-flash ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-flash m)
-	target_link_libraries(pilight-flash execinfo)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		target_link_libraries(pilight-flash execinfo)
+	endif()
 	target_link_libraries(pilight-flash ${CMAKE_THREAD_LIBS_INIT})
 
 	if(EXISTS "/usr/local/sbin/pilight-send")
