Cache action arguments and allow user to disable events library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,8 +135,12 @@ endif()
 
 include_directories("${PROJECT_SOURCE_DIR}/libs/pilight/")
 include_directories("${PROJECT_SOURCE_DIR}/libs/config/")
-include_directories("${PROJECT_SOURCE_DIR}/libs/operators/")
-include_directories("${PROJECT_SOURCE_DIR}/libs/actions/")
+
+if(${EVENTS} MATCHES "ON")
+	include_directories("${PROJECT_SOURCE_DIR}/libs/operators/")
+	include_directories("${PROJECT_SOURCE_DIR}/libs/actions/")
+endif()
+
 include_directories("${PROJECT_SOURCE_DIR}/libs/avrdude/")
 include_directories("${PROJECT_SOURCE_DIR}/libs/platform/")
 
@@ -160,6 +164,10 @@ file(GLOB config
 	"${PROJECT_SOURCE_DIR}/libs/config/*.c"
 )
 
+file(GLOB config_headers
+	"${PROJECT_SOURCE_DIR}/libs/config/*.h"
+)
+
 file(GLOB hardware_headers
 	"${PROJECT_SOURCE_DIR}/libs/hardware/*.h"
 )
@@ -176,21 +184,24 @@ file(GLOB pilight
 	"${PROJECT_SOURCE_DIR}/libs/pilight/*.c"
 	"${PROJECT_SOURCE_DIR}/libs/avrdude/*.c")
 
-file(GLOB operators
-	"${PROJECT_SOURCE_DIR}/libs/operators/*.c"
-)
 
-file(GLOB operators_headers
-	"${PROJECT_SOURCE_DIR}/libs/operators/*.h"
-)
+if(${EVENTS} MATCHES "ON")
+	file(GLOB operators
+		"${PROJECT_SOURCE_DIR}/libs/operators/*.c"
+	)
 
-file(GLOB actions
-	"${PROJECT_SOURCE_DIR}/libs/actions/*.c"
-)
+	file(GLOB operators_headers
+		"${PROJECT_SOURCE_DIR}/libs/operators/*.h"
+	)
 
-file(GLOB actions_headers
-	"${PROJECT_SOURCE_DIR}/libs/actions/*.h"
-)
+	file(GLOB actions
+		"${PROJECT_SOURCE_DIR}/libs/actions/*.c"
+	)
+
+	file(GLOB actions_headers
+		"${PROJECT_SOURCE_DIR}/libs/actions/*.h"
+	)
+endif()
 
 if(${PROTOCOL_ALECTO_WSD17} MATCHES "OFF")
 	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/alecto_wsd17.h")
@@ -523,9 +534,20 @@ if(${WEBSERVER} MATCHES "OFF")
 	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/mongoose.c")
 endif()
 
+if(${EVENTS} MATCHES "OFF")
+	list(REMOVE_ITEM pilight_headers "${PROJECT_SOURCE_DIR}/libs/pilight/events.h")
+	list(REMOVE_ITEM pilight_headers "${PROJECT_SOURCE_DIR}/libs/pilight/action.h")
+	list(REMOVE_ITEM pilight_headers "${PROJECT_SOURCE_DIR}/libs/pilight/operator.h")
+	list(REMOVE_ITEM config_headers "${PROJECT_SOURCE_DIR}/libs/config/rules.h")
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/events.c")
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/action.c")
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/operator.c")
+	list(REMOVE_ITEM config "${PROJECT_SOURCE_DIR}/libs/config/rules.c")
+endif()
+
 file(GLOB avrdude_sources "${PROJECT_SOURCE_DIR}/libs/avrdude/*.c")
 
-if(${FIRMWARE} MATCHES "OFF")
+if(${FIRMWARE_UPDATER} MATCHES "OFF")
 	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/pilight/firmware.c")
 	list(REMOVE_ITEM pilight ${avrdude_sources})
 	file(GLOB avrdude_headers "${PROJECT_SOURCE_DIR}/libs/avrdude/*.h")
@@ -593,61 +615,63 @@ if(${MODULESPACK} MATCHES "OFF")
 	set(HARDWARE_INIT ${init4})
 	configure_file(libs/config/hardware_init.h.in libs/config/hardware_init.h)	
 
-	set(header3)
-	foreach(header ${operators_headers})
-		string(REPLACE ${PROJECT_SOURCE_DIR}/libs "	#include \".." header1 ${header}) 
-		string(REPLACE ".h" ".h\"!" header2 ${header1})
-		list(APPEND header3 ${header2})
-	endforeach(header)
+	if(${EVENTS} MATCHES "ON")
+		set(header3)
+		foreach(header ${operators_headers})
+			string(REPLACE ${PROJECT_SOURCE_DIR}/libs "	#include \".." header1 ${header}) 
+			string(REPLACE ".h" ".h\"!" header2 ${header1})
+			list(APPEND header3 ${header2})
+		endforeach(header)
 
-	string(REPLACE "!" "\n" header4 ${header3})
-	set(OPERATORS_HEADERS ${header4})
-	configure_file(libs/pilight/operator_header.h.in libs/pilight/operator_header.h)	
+		string(REPLACE "!" "\n" header4 ${header3})
+		set(OPERATORS_HEADERS ${header4})
+		configure_file(libs/pilight/operator_header.h.in libs/pilight/operator_header.h)	
 
-	execute_process(
-	COMMAND grep -h "void .*Init(void)" ${operators}
-		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-		RESULT_VARIABLE operators_result
-		OUTPUT_VARIABLE operators_init)
+		execute_process(
+		COMMAND grep -h "void .*Init(void)" ${operators}
+			WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+			RESULT_VARIABLE operators_result
+			OUTPUT_VARIABLE operators_init)
 
-	set(init3)
-	foreach(init ${operators_init})
-		string(REPLACE "void " "	" init1 ${init})
-		string(REPLACE "(void) {" "()!" init2 ${init1})
-		list(APPEND init3 ${init2})
-	endforeach(init)
+		set(init3)
+		foreach(init ${operators_init})
+			string(REPLACE "void " "	" init1 ${init})
+			string(REPLACE "(void) {" "()!" init2 ${init1})
+			list(APPEND init3 ${init2})
+		endforeach(init)
 
-	string(REPLACE "!" ";" init4 ${init3})
-	set(OPERATORS_INIT ${init4})
-	configure_file(libs/pilight/operator_init.h.in libs/pilight/operator_init.h)
+		string(REPLACE "!" ";" init4 ${init3})
+		set(OPERATORS_INIT ${init4})
+		configure_file(libs/pilight/operator_init.h.in libs/pilight/operator_init.h)
 
-	set(header3)
-	foreach(header ${actions_headers})
-		string(REPLACE ${PROJECT_SOURCE_DIR}/libs "	#include \".." header1 ${header}) 
-		string(REPLACE ".h" ".h\"!" header2 ${header1})
-		list(APPEND header3 ${header2})
-	endforeach(header)
+		set(header3)
+		foreach(header ${actions_headers})
+			string(REPLACE ${PROJECT_SOURCE_DIR}/libs "	#include \".." header1 ${header}) 
+			string(REPLACE ".h" ".h\"!" header2 ${header1})
+			list(APPEND header3 ${header2})
+		endforeach(header)
 
-	string(REPLACE "!" "\n" header4 ${header3})
-	set(ACTIONS_HEADERS ${header4})
-	configure_file(libs/pilight/action_header.h.in libs/pilight/action_header.h)	
+		string(REPLACE "!" "\n" header4 ${header3})
+		set(ACTIONS_HEADERS ${header4})
+		configure_file(libs/pilight/action_header.h.in libs/pilight/action_header.h)	
 
-	execute_process(
-	COMMAND grep -h "void .*Init(void)" ${actions}
-		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-		RESULT_VARIABLE actions_result
-		OUTPUT_VARIABLE actions_init)
+		execute_process(
+		COMMAND grep -h "void .*Init(void)" ${actions}
+			WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+			RESULT_VARIABLE actions_result
+			OUTPUT_VARIABLE actions_init)
 
-	set(init3)
-	foreach(init ${actions_init})
-		string(REPLACE "void " "	" init1 ${init})
-		string(REPLACE "(void) {" "()!" init2 ${init1})
-		list(APPEND init3 ${init2})
-	endforeach(init)
+		set(init3)
+		foreach(init ${actions_init})
+			string(REPLACE "void " "	" init1 ${init})
+			string(REPLACE "(void) {" "()!" init2 ${init1})
+			list(APPEND init3 ${init2})
+		endforeach(init)
 
-	string(REPLACE "!" ";" init4 ${init3})
-	set(ACTIONS_INIT ${init4})
-	configure_file(libs/pilight/action_init.h.in libs/pilight/action_init.h)
+		string(REPLACE "!" ";" init4 ${init3})
+		set(ACTIONS_INIT ${init4})
+		configure_file(libs/pilight/action_init.h.in libs/pilight/action_init.h)
+	endif()
 
 	configure_file(pilight.h.in pilight.h)
 endif()
@@ -681,37 +705,43 @@ if(${MODULESPACK} MATCHES "ON")
 		install(FILES lib${name}.so DESTINATION lib/pilight/hardware RENAME ${name}.so COMPONENT pilight-hardware-${debname})
 	endforeach()
 
-	foreach(file ${actions})
-		get_filename_component(name ${file} NAME_WE)
-		add_library(${name}_module MODULE ${file})
-		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
-		target_link_libraries(${name}_module m)
-		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-			target_link_libraries(${name}_module execinfo)
-		endif()
-		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
-		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
-		string(REPLACE "_" "-" debname ${name})
-		install(FILES lib${name}.so DESTINATION lib/pilight/actions RENAME ${name}.so COMPONENT pilight-action-${debname})
-	endforeach()	
-	
-	foreach(file ${operators})
-		get_filename_component(name ${file} NAME_WE)
-		add_library(${name}_module MODULE ${file})
-		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
-		target_link_libraries(${name}_module m)
-		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-			target_link_libraries(${name}_module execinfo)
-		endif()
-		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
-		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
-		string(REPLACE "_" "-" debname ${name})
-		install(FILES lib${name}.so DESTINATION lib/pilight/operators RENAME ${name}.so COMPONENT pilight-operator-${debname})
-	endforeach()		
+	if(${EVENTS} MATCHES "ON")
+		foreach(file ${actions})
+			get_filename_component(name ${file} NAME_WE)
+			add_library(${name}_module MODULE ${file})
+			target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
+			target_link_libraries(${name}_module m)
+			if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+				target_link_libraries(${name}_module execinfo)
+			endif()
+			target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
+			set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
+			string(REPLACE "_" "-" debname ${name})
+			install(FILES lib${name}.so DESTINATION lib/pilight/actions RENAME ${name}.so COMPONENT pilight-action-${debname})
+		endforeach()	
+		
+		foreach(file ${operators})
+			get_filename_component(name ${file} NAME_WE)
+			add_library(${name}_module MODULE ${file})
+			target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
+			target_link_libraries(${name}_module m)
+			if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+				target_link_libraries(${name}_module execinfo)
+			endif()
+			target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
+			set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
+			string(REPLACE "_" "-" debname ${name})
+			install(FILES lib${name}.so DESTINATION lib/pilight/operators RENAME ${name}.so COMPONENT pilight-operator-${debname})
+		endforeach()
+	endif()
 endif()
 
 if(${MODULESPACK} MATCHES "OFF")
-	add_library(pilight OBJECT ${pilight} ${protocol} ${hardware} ${platform} ${config} ${operators} ${actions})
+	if(${EVENTS} MATCHES "ON")
+		add_library(pilight OBJECT ${pilight} ${protocol} ${hardware} ${platform} ${config} ${operators} ${actions})
+	else()
+		add_library(pilight OBJECT ${pilight} ${protocol} ${hardware} ${platform} ${config})
+	endif()
 
 	add_library(pilight_static STATIC $<TARGET_OBJECTS:pilight>)
 	add_library(pilight_shared SHARED $<TARGET_OBJECTS:pilight>)
